--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 <body id="home" data-spy="scroll" data-target="#navbar-wd" data-offset="98">
 
 	<!-- LOADER -->
-    <div id="preloader">
+    <!--<div id="preloader">
 		<div class="preloader pulse">
 			<h3>Sainikhitha & Ramesh Chary</h3>
 		</div>
-    </div><!-- end loader -->
+    </div> --><!-- end loader -->
     <!-- END LOADER -->
 	
 	<!-- Start header -->
